@@ -1,3 +1,9 @@
+20100626
+ - (djm) OpenBSD CVS Sync
+   - djm@cvs.openbsd.org 2010/05/21 05:00:36
+     [misc.c]
+     colon() returns char*, so s/return (0)/return NULL/
+
 20100622
  - (djm) [loginrec.c] crank LINFO_NAMESIZE (username length) to 512
    bz#1579; ok dtucker
